@@ -12,7 +12,6 @@ import com.intellij.ide.util.treeView.NodeDescriptor;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.popup.JBPopupFactory;
-import com.intellij.openapi.util.Disposer;
 import com.intellij.openapi.util.NlsContexts;
 import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.StringUtil;
@@ -23,6 +22,9 @@ import com.intellij.pom.NavigatableAdapter;
 import com.intellij.psi.xml.XmlElement;
 import com.intellij.ui.JBColor;
 import com.intellij.ui.SimpleTextAttributes;
+import com.intellij.ui.tree.AsyncTreeModel;
+import com.intellij.ui.tree.StructureTreeModel;
+import com.intellij.ui.tree.TreeVisitor;
 import com.intellij.ui.treeStructure.*;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.concurrency.AppExecutorUtil;
@@ -52,7 +54,6 @@ import org.jetbrains.idea.maven.tasks.MavenTasksManager;
 import org.jetbrains.idea.maven.utils.*;
 
 import javax.swing.*;
-import javax.swing.tree.DefaultTreeModel;
 import javax.swing.tree.TreePath;
 import java.awt.*;
 import java.awt.event.InputEvent;
@@ -60,6 +61,7 @@ import java.io.File;
 import java.net.URL;
 import java.util.List;
 import java.util.*;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
 
 import static com.intellij.openapi.ui.UiUtils.getPresentablePath;
@@ -81,8 +83,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   private final MavenShortcutsManager myShortcutsManager;
   private final MavenProjectsNavigator myProjectsNavigator;
 
-  private final SimpleTreeBuilder myTreeBuilder;
   private final RootNode myRoot = new RootNode();
+  private final StructureTreeModel<MavenProjectsStructure> myModel;
+  private final SimpleTree myTree;
   private volatile boolean isUnloading = false;
 
   private final Map<MavenProject, ProjectNode> myProjectToNodeMapping = new HashMap<>();
@@ -108,15 +111,10 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
       }
     });
 
-    configureTree(tree);
-
-    myTreeBuilder = new SimpleTreeBuilder(tree, (DefaultTreeModel)tree.getModel(), this, null) {
-      // unique class to simplify search through the logs
-    };
-    Disposer.register(projectsNavigator, myTreeBuilder);
-
-    myTreeBuilder.initRoot();
-    myTreeBuilder.expand(myRoot, null);
+    myTree = tree;
+    configureTree(myTree);
+    myModel = new StructureTreeModel<>(this, projectsNavigator);
+    tree.setModel(new AsyncTreeModel(myModel, projectsNavigator));
   }
 
   private void configureTree(final SimpleTree tree) {
@@ -140,16 +138,11 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
       @Override
       public MavenUIUtil.CheckBoxState getState(Object userObject) {
         MavenProfileKind state = ((ProfileNode)userObject).getState();
-        switch (state) {
-          case NONE:
-            return MavenUIUtil.CheckBoxState.UNCHECKED;
-          case EXPLICIT:
-            return MavenUIUtil.CheckBoxState.CHECKED;
-          case IMPLICIT:
-            return MavenUIUtil.CheckBoxState.PARTIAL;
-        }
-        MavenLog.LOG.error("unknown profile state: " + state);
-        return MavenUIUtil.CheckBoxState.UNCHECKED;
+        return switch (state) {
+          case NONE -> MavenUIUtil.CheckBoxState.UNCHECKED;
+          case EXPLICIT -> MavenUIUtil.CheckBoxState.CHECKED;
+          case IMPLICIT -> MavenUIUtil.CheckBoxState.PARTIAL;
+        };
       }
     });
   }
@@ -169,7 +162,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   private void updateFrom(SimpleNode node) {
     if (node != null) {
-      myTreeBuilder.addSubtreeToUpdateByElement(node);
+      myModel.invalidate(node, true);
     }
   }
 
@@ -254,8 +247,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
   }
 
-  public void accept(SimpleNodeVisitor visitor) {
-    ((SimpleTree)myTreeBuilder.getTree()).accept(myTreeBuilder, visitor);
+  public void accept(@NotNull TreeVisitor visitor) {
+    ((AsyncTreeModel)myTree.getModel()).accept(visitor);
   }
 
   public void updateGoals() {
@@ -276,7 +269,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public void select(SimpleNode node) {
-    myTreeBuilder.select(node, null);
+    myModel.select(node, myTree, treePath -> {});
   }
 
   private ProjectNode findNodeFor(MavenProject project) {
@@ -419,7 +412,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
     }
 
     @Override
-    public void cleanUpCache() {
+    public synchronized void cleanUpCache() {
       super.cleanUpCache();
       myTotalErrorLevel = null;
     }
@@ -433,7 +426,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
       updateUpTo(this);
     }
 
-    public ErrorLevel getTotalErrorLevel() {
+    public synchronized ErrorLevel getTotalErrorLevel() {
       if (myTotalErrorLevel == null) {
         myTotalErrorLevel = calcTotalErrorLevel();
       }
@@ -547,7 +540,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public abstract class ProjectsGroupNode extends GroupNode {
-    private final List<ProjectNode> myProjectNodes = new ArrayList<>();
+    private final List<ProjectNode> myProjectNodes = new CopyOnWriteArrayList<>();
 
     public ProjectsGroupNode(MavenSimpleNode parent) {
       super(parent);
@@ -599,7 +592,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
     @Override
     protected List<? extends MavenSimpleNode> doGetChildren() {
-      return ContainerUtil.concat(Collections.singletonList(myProfilesNode), super.doGetChildren());
+      var children = new CopyOnWriteArrayList<MavenSimpleNode>(List.of(myProfilesNode));
+      children.addAll(super.doGetChildren());
+      return children;
     }
 
     public void updateProfiles() {
@@ -608,7 +603,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public class ProfilesNode extends GroupNode {
-    private List<ProfileNode> myProfileNodes = new ArrayList<>();
+    private final List<ProfileNode> myProfileNodes = new CopyOnWriteArrayList<>();
 
     public ProfilesNode(MavenSimpleNode parent) {
       super(parent);
@@ -635,7 +630,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         newNodes.add(node);
       }
 
-      myProfileNodes = newNodes;
+      myProfileNodes.clear();
+      myProfileNodes.addAll(newNodes);
       sort(myProfileNodes);
       childrenChanged();
     }
@@ -808,10 +804,9 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
     @Override
     protected List<? extends MavenSimpleNode> doGetChildren() {
-      return ContainerUtil.concat(
-        Arrays.asList(myLifecycleNode, myPluginsNode, myRunConfigurationsNode, myDependenciesNode),
-        super.doGetChildren()
-      );
+      var children = new CopyOnWriteArrayList<MavenSimpleNode>(List.of(myLifecycleNode, myPluginsNode, myRunConfigurationsNode, myDependenciesNode));
+      children.addAll(super.doGetChildren());
+      return children;
     }
 
     private void updateProject() {
@@ -986,7 +981,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public abstract class GoalsGroupNode extends GroupNode {
-    protected final List<GoalNode> myGoalNodes = new ArrayList<>();
+    protected final List<GoalNode> myGoalNodes = new CopyOnWriteArrayList<>();
 
     public GoalsGroupNode(MavenSimpleNode parent) {
       super(parent);
@@ -1116,7 +1111,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
   }
 
   public class PluginsNode extends GroupNode {
-    private final List<PluginNode> myPluginNodes = new ArrayList<>();
+    private final List<PluginNode> myPluginNodes = new CopyOnWriteArrayList<>();
 
     public PluginsNode(ProjectNode parent) {
       super(parent);
@@ -1236,7 +1231,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   public abstract class BaseDependenciesNode extends GroupNode {
     protected final MavenProject myMavenProject;
-    private List<DependencyNode> myChildren = new ArrayList<>();
+    private final List<DependencyNode> myChildren = new CopyOnWriteArrayList<>();
 
     protected BaseDependenciesNode(MavenSimpleNode parent, MavenProject mavenProject) {
       super(parent);
@@ -1299,7 +1294,8 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
         newNodes = new ArrayList<>(myChildren.subList(0, validChildCount));
       }
 
-      myChildren = newNodes;
+      myChildren.clear();
+      myChildren.addAll(newNodes);
       childrenChanged();
     }
 
@@ -1424,7 +1420,7 @@ public class MavenProjectsStructure extends SimpleTreeStructure {
 
   public class RunConfigurationsNode extends GroupNode {
 
-    private final List<RunConfigurationNode> myChildren = new ArrayList<>();
+    private final List<RunConfigurationNode> myChildren = new CopyOnWriteArrayList<>();
 
     public RunConfigurationsNode(ProjectNode parent) {
       super(parent);
